--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "express": "^4.21.0",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "request": "^2.88.2"
   }
 }
